--- a/pfe-frontend/src/app/core/features/components/login/login.component.html
+++ b/pfe-frontend/src/app/core/features/components/login/login.component.html
@@ -9,7 +9,8 @@
   
   <div class="flex flex-col gap-2">
     <label for="password" class="font-medium">Password</label>
-    <input id="password" type="password" pInputText [(ngModel)]="password" name="password" minlength="6" required class="w-full" />
+    <!-- <input id="password" type="password" pInputText [(ngModel)]="password" name="password" minlength="6" required class="w-full"/> -->
+    <p-password [(ngModel)]="password" id="password" name="password"  minlength="6" required [toggleMask]="true"/>
   </div>
   
   <p-button label="Login" type="submit" class="w-full"></p-button>
