--- a/pfe-frontend/src/app/core/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/core/sidebar/sidebar.component.html
@@ -65,6 +65,8 @@
       <ul>
         <li><a pRipple routerLink="discipline" routerLinkActive="active"
             class="block p-2 rounded hover:bg-blue-100">Disciplinary Actions</a></li>
+            <li><a pRipple routerLink="departments" routerLinkActive="active"
+            class="block p-2 rounded hover:bg-blue-100">departments</a></li>
       </ul>
     </div>
   </nav>
